--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
-#category-select {
+/* #category-select {
     display: none;
     /* background-color: grey; */
-    border-radius:5px;
+    /* border-radius:5px;
 }
-
 
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
 }
 
@@ -17,7 +17,7 @@ body {
 }
 
 li { 
-    margin-bottom: .7rem;
+    margin-bottom:.7rem;
 }
 
 li:hover{
@@ -25,6 +25,6 @@ li:hover{
     color: black;
 
 }
-
+ */ */
 
 
